<resources>
    <string name="app_name">InformaticHUB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_pw">Password:</string>
    <string name="text_user">Username:</string>
    <string name="hint_user">Username</string>
    <string name="hint_pw">Password</string>
    <string name="btn_login_moodle">Login Moodle</string>
    <string name="btn_login_esse3">Login Esse3</string>
    <string name="course_title">List of userMoodle\'s courses</string>
    <string name="list_of_category">List of category</string>
    <string name="course_list">Course List</string>
    <string name="my_courses">My Courses</string>
    <string name="courses">Courses</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="menu">Menu</string>
    <string name="forgotten_password_click_here"><u>Forgotten password? Click here</u></string>
    <string name="enrollment_required">Enrollment required</string>
    <string name="enrollment_question">Do you want to enroll this course?</string>
    <string name="warning">Warning</string>
    <string name="reservation_not_available">Reservation function is not available on the mobile app</string>
    <string name="wait">Please wait…</string>
    <string name="download_info">Download info from server</string>
    <string name="download_file">Download file</string>
    <string name="problem_download">Problem during downloading file</string>
    <string name="no_find_app">Cannot find an app to open this type of file</string>
    <string name="enrollment">Enrollment</string>
    <string name="cannot_enroll">Cannot enroll in this course</string>
    <string name="unknown_error">Unknown error</string>
    <string name="enrolled_successfull">Enrolled successful</string>
    <string name="fetch_course">Fetching course info</string>
    <string name="section_failed">Failed to fetch section info</string>
    <string name="fetch_forum">Fetching forum info</string>
    <string name="forum_failed">Failed to fetch forum info</string>
    <string name="discussion_failed">Failed to fecth discussion info</string>
    <string name="login_esse3">Login Esse3</string>
    <string name="login_moodle">Login Moodle</string>
    <string name="login_failed">Login failed, please check username and password</string>
    <string name="site_failed">Failed to fetch site info</string>
    <string name="course_failed">Failed to fetch course info</string>
    <string name="category_failed">Failed to fetch category info</string>
    <string name="insert_username">Insert username!</string>
    <string name="insert_pw">Insert password!</string>
    <string name="error">Error occurred.</string>
    <string name="home">Home</string>
    <string name="user_info">User Info</string>
    <string name="name_info">Name:</string>
    <string name="surname_info">Surname:</string>
    <string name="logout">Logout</string>
    <string name="info_title">User\'s info</string>
    <string name="image1">image</string>
    <string name="header">User:</string>
    <string name="error_news">Error during fetching news from server</string>
    <string name="news">News</string>
    <string name="hour">Hour</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="image2">image</string>
    <string name="server_problem">There are comunication issues with the server</string>
    <string name="file_not_available">File not available yet</string>
    <string name="img_username">image username</string>
    <string name="img_pw">image password</string>
    <string name="img_bg">image background login moodle</string>
    <string name="img_folder">folder icon</string>
    <string name="timetable">Timetable</string>
    <string name="cohorts">Cohorts</string>
    <string name="imgModule">image Module</string>
    <string name="img_post">image</string>
    <string name="img_author">image</string>
    <string name="img_unibas_logo">image</string>
    <string name="img_cat">image</string>
    <string name="exam_error">Error during fetching exam info</string>
    <string name="exam_title">List of Exams</string>
    <string name="grade">Weighted Average (30):</string>
    <string name="average">Weighted Average (110):</string>
    <string name="total_cfu">Total CFU:</string>
    <string name="btn_add_news">Add News</string>
    <string name="hint_title">Title</string>
    <string name="hint_message">Message</string>
    <string name="insert_title">Insert title!</string>
    <string name="insert_message">Insert message!</string>
    <string name="post_news">Posting news</string>
    <string name="telegram">Telegram</string>
    <string name="twitter">Twitter</string>
    <string name="info">Info</string>
    <string name="app_description">This application has been created as part of the experimental project of Graduation of the student Luca Biscione.\n\nGraduadion course of Computer Scienze and Technology\nUniversity of Basilicata\n\nTeacher: Donatello Santoro\nGraduation year: 2017-2018\n\ne-mail: luca.biscione.94@gmail.com\n\n\nI hope you will enjoy using this app!</string>
    <string name="authentication">Authentication</string>
    <string name="moodle">Moodle</string>
    <string name="general">General</string>
    <string name="home_moodle">Home Moodle</string>
    <string name="social">Social</string>
    <string name="about">About</string>
    <string name="exams">Exams</string>
    <string name="timetable_title">Timetable</string>
    <string name="insert_news">Insert news</string>
    <string name="number">Number:</string>
</resources>
