<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmoodle"
    android:padding="10dp">

    <EditText
        android:id="@+id/eTUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_user"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/guidelineo2"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/guidelinev2"
        app:layout_constraintTop_toTopOf="@+id/guidelineo1"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/eTPw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_pw"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineo3"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guidelinev2"
        app:layout_constraintStart_toStartOf="@+id/guidelinev2"
        app:layout_constraintTop_toBottomOf="@+id/guidelineo2"
        app:layout_constraintVertical_bias="0.474"
        tools:targetApi="o" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinev3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_btn"
        android:padding="20dp"
        android:text="@string/btn_login_moodle"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtRedirect"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev3"
        app:layout_constraintStart_toEndOf="@+id/guidelinev1"
        app:layout_constraintStart_toStartOf="@+id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineo3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgotten_password_click_here"
        android:textAlignment="viewEnd"
        android:textColor="#0645AD"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelinev1"
        app:layout_constraintTop_toTopOf="@+id/guidelineo3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img_username"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineo2"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guidelinev1"
        app:layout_constraintStart_toStartOf="@+id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineo1"
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@drawable/ic_username" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img_pw"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineo3"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guidelinev1"
        app:layout_constraintStart_toStartOf="@+id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineo2"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/ic_pw" />

</android.support.constraint.ConstraintLayout>